added few more hover effects

--- a/data/events/inception.mdx
+++ b/data/events/inception.mdx
@@ -1,6 +1,6 @@
 ---
 title: Inception
 date: '2023-09-25'
-summary: ACM brings to you yet another iteration of one of its most awaited coding events, Inception
+summary: ACM brings to you yet another iteration of one of its most awaited coding events, Inception. Compete with other in one of our most popular coding contests.
 description:
 ---
