Added modal component for event details and gallery

--- a/data/blog/First_step_research.mdx
+++ b/data/blog/First_step_research.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'First Step Towards Reasearch'
 date: '2023-10-21'
-tags: ['wordpress', 'github']
+tags: ['research', 'computer science', 'masters']
 draft: false
 authors: ['bhavya']
 summary: 'How I approached research during my undergraduate CS degree and got my first internship.'
