--- a/data/blog/Probabilistic_Realistic_Algorithms.mdx
+++ b/data/blog/Probabilistic_Realistic_Algorithms.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Understanding Probabilistic Analysis and Randomized Algorithms'
 date: '2023-08-13'
-tags: ['wordpress', 'github']
+tags: ['probability', 'algorithms']
 draft: false
 authors: ['bhavya']
 summary: 'I guess it comes down to a simple choice really: Get busy living, or get busy dying. Andy Dufresne, “Shawshank redemption” Let us consider a man called Boris who has an algorithm. To determine its practicality, Boris might want to estimate its run time. This is standard practice for people in Computer Science. They always…'
